# CortextAST

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  MCP_SETUP.md  README.md  USE_CASES.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: config.rs  inspector.rs  lib.rs  main.rs  mapper.rs  scanner.rs  slicer.rs  xml_builder.rs
docs/: MCP_SETUP.md  languages.md
extension/: .vscodeignore  README.md  esbuild.extension.mjs  esbuild.tests.mjs  esbuild.webview.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
extension/src/: discovery.ts  extension.ts  spawnInspector.ts  spawnMap.ts  spawnSlicer.ts  types.d.ts
extension/src/test/: runTest.ts
extension/src/test/suite/: index.ts  rust.test.ts
extension/src/webview/: App.test.tsx  App.tsx  FileNode.tsx  ModuleNode.tsx  NetworkEdge.tsx  index.tsx  vscode.ts
scripts/: build_binary.mjs  bundle.mjs  copy_core_bin_to_extension.mjs  self_test.py  test_binary.mjs  test_mcp_binary.mjs
src/: chronos.rs  cli.js  config.js  config.rs  defaults.js  focus_auto.js  inspector.rs  lib.rs  main.rs  mapper.rs  mcp.js  memory.rs  model.js  packer.js  preset.js  repomix_runner.js  rules.rs  scanner.rs  sea_main.js  server.rs  slicer.rs  vector_store.rs  vscode_detect.js  workspace.rs  xml_builder.rs
src/act/: markup_patcher.rs  mod.rs  workflow.rs
src/data_engine/: duckdb_engine.rs  mod.rs  raw_text_engine.rs
tests/: e2e_memory.rs  mcp_stdio_smoke.rs
(+1 files in other folders)
